# video-meeting-app

./: pyproject.toml
conference_server/: .gitignore  pyproject.toml
conference_server/conference_server/: manage.py
conference_server/conference_server/conference_server/: asgi.py  settings.py  urls.py  wsgi.py
conference_server/conference_server/meeting_call/: apps.py  urls.py  views.py
conference_server/conference_server/meeting_call/static/css/: main.css  statistics.css
conference_server/conference_server/meeting_call/static/js/: server_offer.js
conference_server/conference_server/meeting_call/static/server_js/: client.js
conference_server/conference_server/meeting_call/templates/: index.html  meeting.html  statistics.html
conference_server/video_app/meeting_call/static/css/: style.css
conference_server/video_app/meeting_call/templates/: index.html
sdp_server/: pyproject.toml  server.py
video_app/video_app/: settings.py  urls.py
video_call/: manage.py  urls.py
video_call/video_call/: asgi.py  settings.py  wsgi.py
