[tool.poetry]
name = "video-call"
version = "0.1.0"
description = ""
authors = ["donil <donil@DESKTOP-EV66SOA.(none)>"]
readme = "README.md"
packages = [{include = "video_call"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
