[tool.poetry]
name = "video-meeting-app"
version = "0.1.0"
description = ""
authors = ["donil <donil@DESKTOP-EV66SOA.(none)>"]
readme = "README.md"
packages = [{include = "video_meeting_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
